# RCSB_UTILS_SEQALIGN HISTORY
  26-Oct-2020  - V0.10 Created module
  28-Oct-2020  - V0.11 Create pipeline workflow
  28-Oct-2020  - V0.12 Add result parser
   7-Nov-2020  - V0.13 Add methods to evaluate search results
  11-Nov-2020  - V0.14 Add full UniProt xref export method.
   7-Dec-2020  - V0.15 Refactor module, migrate MiscUtils methods to other modules, remove mock-data submodule
  26-Mar-2021  - V0.16 Adjust fields and field names in alignment output object
  28-Mar-2021  - V0.17 Further extensions in fields in alignment output object
  13-May-2021  - V0.18 Add searchDatabaseFasta() and make searchDatabase() consistent with mapDatabase()
  12-Jun-2021  - V0.19 Add bit score filtering in __getMatchResults()
  12-Jun-2021  - V0.20 Updating installation scripts
  27-Jun-2021  - V0.21 Adjust handling of defaults for formatOutput parameter in __formatSearchResults()
   4-Jul-2021  - V0.22 Add new tests for searchDatabase() and make sensitivity adjustable in tests
  11-Jul-2021  - V0.23 Add getAlignedRegions() convenience method
  11-Jul-2021  - V0.24 Add aligned regions to the default query results data structure
  29-Jul-2021  - V0.25 Disable cleanup of taxonomy download files in TaxonomyProvider()
   9-Jan-2023  - V0.26 Configuration changes to support tox 4