@@ -16,3 +16,4 @@
   11-Jul-2021  - V0.24 Add aligned regions to the default query results data structure
   29-Jul-2021  - V0.25 Disable cleanup of taxonomy download files in TaxonomyProvider()
    9-Jan-2023  - V0.26 Configuration changes to support tox 4
+  22-May-2023  - V0.27 Add retries to tox task for MMseqs2 download
